# cognito-flask-test

./: README.md  main.py  pyproject.toml
static/: app.mjs  config.js
templates/: index.html
